# serverless-rust-starter

./: .gitignore  Cargo.toml  README.md  package.json  serverless.yml
src/: main.rs
