[package]
name = "rust-sls"
version = "0.2.0"
authors = ["ayankovsky <contact@arseny.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.64"
lambda_runtime = "0.5.0"
tokio = "1.17.0"
aws_lambda_events = "0.6.1"
