[package]
name = "rust-sls"
version = "0.3.0"
authors = ["ayankovsky <contact@arseny.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.64"
lambda_runtime = "0.7.3"
tokio = "1.25.0"
aws_lambda_events = "0.7.3"
