[package]
name = "rust-sls"
version = "0.4.0"
authors = ["ayankovsky <contact@arseny.dev>"]
edition = "2018"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
lambda_runtime = "0.8.1"
tokio = "1.29.1"
aws_lambda_events = "0.10.0"
